<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center"
	android:orientation="vertical">

	<Button
		android:id="@+id/pick_from_gallery"
		android:layout_width="match_parent"
		style="?android:attr/buttonStyleSmall"
		android:layout_height="wrap_content"
		android:text="@string/pick_from_gallery"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"/>

	<Button
		android:id="@+id/take_picture"
		android:layout_width="match_parent"
		style="?android:attr/buttonStyleSmall"
		android:layout_height="wrap_content"
		android:text="@string/take_picture"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"/>

	<Button
		android:id="@+id/cancel"
		android:layout_width="match_parent"
		style="?android:attr/buttonStyleSmall"
		android:layout_height="wrap_content"
		android:text="@string/cancel"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"/>

</LinearLayout>

